[package]
name = "mathml-asciimath"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "Convert between MathML and AsciiMath."
repository = "https://github.com/oovm/mathml"
documentation = "https://docs.rs/mathml-latex"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
tracing = "0.1.37"

[dependencies.pex]
version = "0.0.7"
#path = "C:\\Users\\Dell\\CLionProjects\\pex\\projects\\pex-core"

[dependencies.mathml-core]
version = "0.0.*"
path = "../mathml-core"

[dev-dependencies]

[features]
default = []
