[package]
name = "mathml-core"
version = "0.0.2"
authors = ["Aster <192607617@qq.com>"]
description = "MathML type definitions"
repository = "https://github.com/oovm/mathml"
documentation = "https://docs.rs/mathml-core"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
latexify = "0.0.0"

[dev-dependencies]

[features]
default = []
