[package]
name = "mathml-latex"
version = "0.0.2"
authors = ["Aster <192607617@qq.com>"]
description = "Convert between MathML and LaTeX."
repository = "https://github.com/oovm/mathml"
documentation = "https://docs.rs/mathml-latex"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["tests/**"]

[dependencies]
tracing = "0.1.37"

[dependencies.pex]
version = "0.0.8"
#path = "C:\\Users\\Dell\\CLionProjects\\pex\\projects\\pex-core"

[dependencies.mathml-core]
version = "0.1.*"
path = "../mathml-core"
features = ["serde"]

[dev-dependencies]

[features]
default = []

